<resources>
    <string name="app_name">FoodHub</string>
    <string name="txt_login">Login</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_register">Register</string>
    <string name="login_title">Login</string>
    <string name="back_to_login">Back to login</string>
    <string name="back_to_login_small">Back</string>
    <string name="click_to_register">Click to register</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_name">Name</string>
    <string name="txt_confirm_password">Confirm Password</string>
    <string name="txt_address">Address</string>
    <string name="txt_phonenumber">Phone Number</string>
    <string name="delete">Delete</string>
    <string name="to_profile">Go to profile</string>
    <string name="txt_sign_up">Don\'t have an account yet? Sign up!</string>
    <string name="API_key">AIzaSyCbPgTkJ8SBVzOyeC1NUtiDIzS6sfrCVrY</string>
    <string name="title_activity_product_page">ProductPage</string>
    <string name="textview">TextView</string>
    <string name="textview1">NAVN</string>
    <string name="textview2">EMAIL</string>
    <string name="textview3">TITLE</string>
    <string name="input_summarize">Summarize shared items</string>
    <string name="input_address">Address</string>
    <string name="input_expiration_date">Expiration date</string>
    <string name="ls_description">Description</string>
    <string name="btn_upload_photos">Upload photos</string>
    <string name="btn_submit">Submit</string>
    <string name="delete_account">Delete Account</string>
    <string name="new_listing">New listing</string>
    <string name="market_title">Market</string>
    <string name="alerts_title">Alerts</string>
    <string name="profile_title">Profile</string>
    <string name="btn_menu">Menu</string>
    <string name="btn_reserve">Reserve</string>
    <string name="btn_save">Save</string>
    <string name="tv_select_language">Select language</string>
    <string name="hint_name">Name:</string>
    <string name="hint_email">Email:</string>
    <string name="hint_phone">Phone:</string>
    <string name="hint_location">Location:</string>
    <string name="tv_listing">New listing</string>
    <string name="accept">Reserve</string>
</resources>